# HAK-GAL-Hexagonal

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_MANUAL_CONFIG.md  CLEANUP_SUCCESS.md  COMPLETE_FIX.bat  CONTRIBUTING.md  CREATE_SHORTCUTS.ps1  Caddyfile  DATABASE_SETUP.md  Dockerfile  FINAL_CLEANUP_CHECKLIST.md  FINAL_HANDOVER.md  FIX_CONFIG_ERROR.bat  FIX_DATABASE_NOW.py  FIX_DNS.bat  GEMINI.md  GITHUB_CLEANUP_NEEDED.md  GIT_TOOLS_REFERENCE.md  GPT5_TASKS.md  HAK-GAL-Dashboard-Fixed.json  HAK-GAL-Dashboard-Import.json  HEXAGONAL_COMPLETION_STATUS.md  HEXAGONAL_FINAL_STATUS.md  LICENSE  MANUAL_START_GUIDE.md  MCP_CRITICAL_DISCOVERY.md  MCP_INSTALLATION_GUIDE.md  MCP_MVP_IMPLEMENTATION_PLAN.md  MCP_MVP_SECURITY_ENHANCEMENTS.md  MCP_README.md  MCP_RESEARCH_PROJECT.md  MCP_STATUS_REPORT.md  MCP_TOOLBOX.md  MCP_TOOLS_COMPLETE_V2.md  MIGRATE_TO_NATIVE.bat  MIGRATE_TO_NATIVE.py  MIGRATE_TO_NATIVE_UTF8.bat  (+291 more)
.claude/: settings.local.json
.cursor/: mcp.json
PROJECT_HUB/: ABHANDLUNG_AUTOMATISCHE_WISSENSGENERIERUNG_GPT5_20250814.md  AGENT_INSTRUCTIONS.md  AI_COLLABORATION_DEEPSEEK_CLAUDE.md  ARCHIMEDES_README.md  CLAUDE.md  CURSOR_MCP_INTEGRATION_GUIDE.md  DOCUMENTATION_CORRECTIONS_CRITICAL.md  ECHTE_VERBESSERUNGEN.md  ENGLISH_MIGRATION_SUCCESS_REPORT.md  FINAL_REPORT_20250910.md  FINAL_SESSION_REPORT_HP_INTEGRATION_2025_01_21.md  FRONTEND_MODERNIZATION_REPORT.md  GEMINI.md  GIT_CLEANUP_PLAN.md  GOVERNANCE_IMPLEMENTATION_REPORT_20250910.md  GOVERNANCE_PERFORMANCE_REPORT_20250910.md  GOVERNANCE_V3_IMPLEMENTATION_REPORT_20250910.md  GOVERNOR_PORT_FIX.md  GPT5_PRODUCTION_IMPLEMENTATION.md  GPT5_SOLUTIONS_README.md  GPT5_SSE_SOLUTION_ANALYSIS.md  HAKGAL_AUDITLOGGER_ANALYSIS_20250909_1845.md  HAKGAL_BOUNDARY_CROSSING_ANALYSIS_20250814_1330.md  HAKGAL_CONSTITUTION_ANALYSIS_20250909_1815.md  HAKGAL_POLICYGUARD_ANALYSIS_20250909_1830.md  HAKGAL_SUITE_CODE_ANALYSIS_20250909_1745.md  HAK_GAL_COHERENCE_PROTOCOL_V2_CORRECTED.md  HAK_GAL_DEVELOPMENT_MASTER_PLAN.md  HAK_GAL_ENGINES_GOVERNANCE_COMPLEX_FACTS_ANALYSIS_2025-01-27.md  HAK_GAL_ENGINES_GOVERNANCE_CORRECTED_PLAN_2025-01-27.md  HAK_GAL_FILESYSTEM_EXECUTIVE_SUMMARY.md  HAK_GAL_FILESYSTEM_TEST_REPORT_2025-01-27.md  HAK_GAL_IMPROVEMENT_ROADMAP_2025-01-27.md  HAK_GAL_LLM_CONTEXT.md  HAK_GAL_MCP_REDUNDANCY_ANALYSIS_2025-01-27.md  HAK_GAL_OPTIMIZATION_MASTER_REPORT.md  HAK_GAL_REDUNDANCY_CASE_STUDY_UR_SERVER_2025-01-27.md  HAK_GAL_SCIENTIFIC_CREATIVE_ANALYSIS_2025-01-27.md  HANZO_HAKGAL_INTEGRATION_PLAN_20250814_1300.md  HANZO_INTEGRATION_COMPLEXITY_ANALYSIS_20250814_1310.md  (+111 more)
data/: benchmark.db  (+1 more)
native/mojo_kernels/: CMakeLists.txt  pyproject.toml
native/mojo_kernels/src/: mojo_kernels.cpp
(+1655 files in other folders)
